// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List disabled renders correctly 1`] = `
.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c0::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: not-allowed;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #686E78FF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c1 .anticon,
.c1 .rovna-ui-icon-root {
  font-size: 16px;
}

<ul
  className="c0 rovna-ui-list"
>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 1
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 2
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 3
    </span>
  </li>
</ul>
`;

exports[`List renders correctly 1`] = `
.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c0::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: pointer;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #343A4AFF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c1:hover {
  background: #1D24360D;
}

.c1 .anticon,
.c1 .rovna-ui-icon-root {
  font-size: 16px;
}

<ul
  className="c0 rovna-ui-list"
>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 1
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 2
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 3
    </span>
  </li>
</ul>
`;

exports[`List scrollable renders correctly 1`] = `
.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
  max-height: 160px;
  overflow: auto;
}

.c0::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: pointer;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #343A4AFF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c1:hover {
  background: #1D24360D;
}

.c1 .anticon,
.c1 .rovna-ui-icon-root {
  font-size: 16px;
}

<ul
  className="c0 rovna-ui-list"
  tabIndex={0}
>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      0
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      1
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      2
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      3
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      4
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      5
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      6
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      7
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      8
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      9
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      10
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      11
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      12
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      13
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      14
    </span>
  </li>
</ul>
`;

exports[`List scrollable with height renders correctly 1`] = `
.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
  max-height: 400px;
  overflow: auto;
}

.c0::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: pointer;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #343A4AFF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c1:hover {
  background: #1D24360D;
}

.c1 .anticon,
.c1 .rovna-ui-icon-root {
  font-size: 16px;
}

<ul
  className="c0 rovna-ui-list"
  tabIndex={0}
>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      0
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      1
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      2
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      3
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      4
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      5
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      6
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      7
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      8
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      9
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      10
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      11
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      12
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      13
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 
      14
    </span>
  </li>
</ul>
`;

exports[`List with "after" renders correctly 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c0::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: pointer;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #343A4AFF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c1:hover {
  background: #1D24360D;
}

.c1 .anticon,
.c1 .rovna-ui-icon-root {
  font-size: 16px;
}

<ul
  className="c0 rovna-ui-list"
>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 1
    </span>
    <span
      className="c3 rovna-ui-icon-root anticon"
      data-testid="rovna-ui-home-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M13.7634 2.04512C12.7119 1.28119 11.2881 1.28118 10.2367 2.04512L2.95637 7.33455C1.99479 8.03319 1.53634 9.23364 1.78744 10.3954L3.80377 19.724C4.10221 21.1047 5.32344 22.0902 6.73605 22.0902H17.264C18.6766 22.0902 19.8978 21.1047 20.1963 19.724L22.2126 10.3954C22.4637 9.23364 22.0052 8.03318 21.0436 7.33455L13.7634 2.04512ZM11.4122 3.66315C11.7627 3.40851 12.2373 3.40851 12.5878 3.66315L19.8681 8.95259C20.1886 9.18546 20.3414 9.58562 20.2577 9.97287L18.2414 19.3015C18.1419 19.7617 17.7348 20.0902 17.264 20.0902H6.73605C6.26518 20.0902 5.8581 19.7617 5.75863 19.3015L3.7423 9.97287C3.6586 9.58562 3.81142 9.18546 4.13194 8.95259L11.4122 3.66315ZM13 13C13 12.4477 12.5523 12 12 12C11.4477 12 11 12.4477 11 13V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 2
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2"
    >
      Item 3
    </span>
  </li>
</ul>
`;

exports[`List with "before" renders correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c0::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: pointer;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #343A4AFF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c1:hover {
  background: #1D24360D;
}

.c1 .anticon,
.c1 .rovna-ui-icon-root {
  font-size: 16px;
}

<ul
  className="c0 rovna-ui-list"
>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c2 rovna-ui-icon-root anticon"
      data-testid="rovna-ui-home-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M13.7634 2.04512C12.7119 1.28119 11.2881 1.28118 10.2367 2.04512L2.95637 7.33455C1.99479 8.03319 1.53634 9.23364 1.78744 10.3954L3.80377 19.724C4.10221 21.1047 5.32344 22.0902 6.73605 22.0902H17.264C18.6766 22.0902 19.8978 21.1047 20.1963 19.724L22.2126 10.3954C22.4637 9.23364 22.0052 8.03318 21.0436 7.33455L13.7634 2.04512ZM11.4122 3.66315C11.7627 3.40851 12.2373 3.40851 12.5878 3.66315L19.8681 8.95259C20.1886 9.18546 20.3414 9.58562 20.2577 9.97287L18.2414 19.3015C18.1419 19.7617 17.7348 20.0902 17.264 20.0902H6.73605C6.26518 20.0902 5.8581 19.7617 5.75863 19.3015L3.7423 9.97287C3.6586 9.58562 3.81142 9.18546 4.13194 8.95259L11.4122 3.66315ZM13 13C13 12.4477 12.5523 12 12 12C11.4477 12 11 12.4477 11 13V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <span
      className="c3"
    >
      Item 1
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c3"
    >
      Item 2
    </span>
  </li>
  <li
    className="c1 rovna-ui-list-item"
    onClick={[Function]}
  >
    <span
      className="c3"
    >
      Item 3
    </span>
  </li>
</ul>
`;

exports[`List with "header" renders correctly 1`] = `
.c1.rovna-ui-typography-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  color: #646A74FF;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c4 {
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c2::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c2::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c2::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background: #FFFFFFFF;
  padding: 4px 0;
  cursor: pointer;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  color: #343A4AFF;
  line-height: 20px;
  -webkit-transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.2s cubic-bezier(0.645,0.045,0.355,1);
}

.c3:hover {
  background: #1D24360D;
}

.c3 .anticon,
.c3 .rovna-ui-icon-root {
  font-size: 16px;
}

<div
  className="c0"
>
  <span
    className="rovna-ui-typography c1 rovna-ui-typography-text css-dev-only-do-not-override-u64svk"
    data-testid="rovna-ui-text"
    style={
      {
        "WebkitLineClamp": undefined,
      }
    }
  >
    Сортировка
  </span>
  <ul
    className="c2 rovna-ui-list"
  >
    <li
      className="c3 rovna-ui-list-item"
      onClick={[Function]}
    >
      <span
        className="c4"
      >
        Item 1
      </span>
    </li>
    <li
      className="c3 rovna-ui-list-item"
      onClick={[Function]}
    >
      <span
        className="c4"
      >
        Item 2
      </span>
    </li>
    <li
      className="c3 rovna-ui-list-item"
      onClick={[Function]}
    >
      <span
        className="c4"
      >
        Item 3
      </span>
    </li>
  </ul>
</div>
`;
